--- a/pages/paginas.html
+++ b/pages/paginas.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links de Interes </title>
     <!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css"> -->
-    <link rel="stylesheet" href="html/assets/css/style.css">
+    <link rel="stylesheet" href="../html/assets/css/style.css">
 
 </head>
 
-<body>
+<body class="formato_default" >
     <ul>
 
     <li><a rel="Principal" href="../index.html">Principal</a></li>
